<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.3</version>
		<relativePath/>
	</parent>
	
	<groupId>com.tfg</groupId>
	<artifactId>gestion-entregables</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>gestion-entregables</name>
	<description>Sistema de Gestión de Entregables - TFG Universidad de Sevilla</description>
	
	<properties>
		<java.version>21</java.version>
		<pitest.version>1.17.2</pitest.version>
		<pitest.junit5.plugin.version>1.2.1</pitest.junit5.plugin.version>
		<junit.platform.version>6.0.3</junit.platform.version>
	</properties>
	
	<dependencies>
		<!-- Web -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		
		<!-- Data JPA -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		
		<!-- Security -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		
		<!-- OAuth2 Client (Google Login) -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-client</artifactId>
		</dependency>
		
		<!-- Validation -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		
		<!-- Mail -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>
		
		<!-- H2 Database (Development) -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
		</dependency>
		
		<!-- MySQL (Production) -->
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<scope>runtime</scope>
		</dependency>
		
		<!-- PostgreSQL (Neon) -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>

		<!-- Flyway (migraciones de base de datos) -->
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-database-postgresql</artifactId>
		</dependency>

		<!-- Lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		
		<!-- DevTools -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		
		<!-- JWT -->
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-api</artifactId>
			<version>0.13.0</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>0.13.0</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-jackson</artifactId>
			<version>0.13.0</version>
			<scope>runtime</scope>
		</dependency>

		<!-- Microsoft Graph SDK (OneDrive) -->
		<dependency>
			<groupId>com.microsoft.graph</groupId>
			<artifactId>microsoft-graph</artifactId>
			<version>6.21.0</version>
		</dependency>
		<dependency>
			<groupId>com.azure</groupId>
			<artifactId>azure-identity</artifactId>
			<version>1.14.2</version>
		</dependency>

		<!-- Jackson (para parseo de respuestas JSON de Microsoft Graph) -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>

		<!-- Test -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-webmvc-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- MockWebServer para simular APIs HTTP externas (OneDrive/Graph) -->
		<dependency>
			<groupId>com.squareup.okhttp3</groupId>
			<artifactId>mockwebserver</artifactId>
			<version>4.12.0</version>
			<scope>test</scope>
		</dependency>

		<!-- Cloudinary (almacenamiento de archivos en la nube) -->
		<dependency>
			<groupId>com.cloudinary</groupId>
			<artifactId>cloudinary-http5</artifactId>
			<version>2.0.0</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
			<!-- JaCoCo - Cobertura de código -->
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.12</version>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<!-- ============================================= -->
	<!-- PERFIL: Compilar frontend e incluirlo en JAR  -->
	<!-- Activar con: mvn package -Pfrontend           -->
	<!-- ============================================= -->
	<profiles>
		<!-- ============================================= -->
		<!-- PERFIL: Mutation testing con PIT              -->
		<!-- Activar con: mvn test -Pmutation             -->
		<!-- ============================================= -->
		<profile>
			<id>mutation</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.pitest</groupId>
						<artifactId>pitest-maven</artifactId>
						<version>${pitest.version}</version>
						<configuration>
							<targetClasses>
								<param>com.tfg.gestionentregables.service.*</param>
								<param>com.tfg.gestionentregables.controller.*</param>
							</targetClasses>
							<targetTests>
								<param>com.tfg.gestionentregables.service.*Test</param>
								<param>com.tfg.gestionentregables.controller.*Test</param>
							</targetTests>
							<threads>4</threads>
							<mutators>
								<mutator>STRONGER</mutator>
							</mutators>
							<outputFormats>
								<param>HTML</param>
								<param>XML</param>
							</outputFormats>
							<timestampedReports>false</timestampedReports>
							<mutationThreshold>70</mutationThreshold>
							<coverageThreshold>75</coverageThreshold>
							<failWhenNoMutations>false</failWhenNoMutations>
						</configuration>
						<dependencies>
							<dependency>
								<groupId>org.pitest</groupId>
								<artifactId>pitest-junit5-plugin</artifactId>
								<version>${pitest.junit5.plugin.version}</version>
							</dependency>
							<dependency>
								<groupId>org.junit.platform</groupId>
								<artifactId>junit-platform-launcher</artifactId>
								<version>${junit.platform.version}</version>
							</dependency>
							<dependency>
								<groupId>org.junit.platform</groupId>
								<artifactId>junit-platform-engine</artifactId>
								<version>${junit.platform.version}</version>
							</dependency>
						</dependencies>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>frontend</id>
			<build>
				<plugins>
					<!-- 1) Instalar Node + npm y compilar frontend -->
					<plugin>
						<groupId>com.github.eirslett</groupId>
						<artifactId>frontend-maven-plugin</artifactId>
						<version>1.15.1</version>
						<configuration>
							<workingDirectory>${project.basedir}/../frontend</workingDirectory>
							<nodeVersion>v20.18.0</nodeVersion>
							<installDirectory>${project.build.directory}/node</installDirectory>
						</configuration>
						<executions>
							<execution>
								<id>install-node-and-npm</id>
								<goals><goal>install-node-and-npm</goal></goals>
							</execution>
							<execution>
								<id>npm-install</id>
								<goals><goal>npm</goal></goals>
								<configuration>
									<arguments>ci</arguments>
								</configuration>
							</execution>
							<execution>
								<id>npm-build</id>
								<goals><goal>npm</goal></goals>
								<configuration>
									<arguments>run build</arguments>
								</configuration>
							</execution>
						</executions>
					</plugin>

					<!-- 2) Copiar frontend/dist/ → classes/static/ -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-resources-plugin</artifactId>
						<executions>
							<execution>
								<id>copy-frontend-dist</id>
								<phase>generate-resources</phase>
								<goals><goal>copy-resources</goal></goals>
								<configuration>
									<outputDirectory>${project.build.outputDirectory}/static</outputDirectory>
									<resources>
										<resource>
											<directory>${project.basedir}/../frontend/dist</directory>
										</resource>
									</resources>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
